--- a/_posts/2014-11-21-Blog bang.markdown
+++ b/_posts/2014-11-21-Blog bang.markdown
@@ -9,9 +9,9 @@ tags:        [start, lucky]
 category:   Life
 ---
 
-<h2 class="section-heading">博客爆炸</h2>
+<h2 class="section-heading">起源</h2>
 
-<blockquote>就像宇宙和生活大爆炸一样，这里始于一场人生的爆炸，自此我决定在这里书写我与我的一切。</blockquote>
+<blockquote>就像宇宙和生活大爆炸一样，这里始于人生中一个质点的爆炸，自此我决定在这里书写我与我的一切。</blockquote>
 
 <h2 class="section-heading">分享阳光，分担风雨</h2>
 <a href="#">
